# cpu-6502-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
asm/: hello.asm  nes.asm
assets/: Opcodes.html  extract-operations.js  memory.txt  nes-documentation.txt  notes.txt  opcodes-table.txt  opcodes-table2.txt  snake.asm
cpu-6502/: Cargo.toml
cpu-6502/src/: asm.rs  bus.rs  controller.rs  cpu_6502.rs  emulator.rs  lib.rs  opcodes.rs  ppu.rs
cpu-6502/src/cpu_6502/: opcodes_illegal.rs  test_helpers.rs
cpu-visualizer/: Cargo.toml
cpu-visualizer/src/: load_cpu.rs  main.rs
cpu-visualizer/src/asm/: add-with-carry.asm  branching.asm  compare.asm  compare_immediate.asm  fibonacci-u8.asm  labels-with-jumps.asm  status-flags.asm
cpu-visualizer/src/util/: mod.rs
emulator/: Cargo.toml
emulator/src/: drivers.rs  main.rs
emulator/src/drivers/: controller_sdl2.rs
examples/: load_rom.rs
nes-core/: Cargo.toml
nes-core/src/: asm.rs  bus.rs  cpu_6502.rs  lib.rs  nes_core.rs
nes-core/src/cpu_6502/: opcodes_move.rs  test_helpers.rs
nes-frontend/: Cargo.toml
nes-frontend/src/: breakpoints.rs  instructions.rs  main.rs  zero_page.rs  zero_page_new.rs
nes-frontend/src/drivers/: controller_sdl2.rs
notes/: cpu-instructions.txt  example.asm  extract-opcodes.js  extract-operations.js  nes_controller.html
notes/macos/: NesFrontend.icns
ppu-cli-tool/: Cargo.toml
ppu-cli-tool/src/: main.rs
ppu-tool/: Cargo.toml
ppu-tool/src/: constants.rs  egui_mq.rs  main.rs  state.rs  utils.rs  view.rs
simple-game/: Cargo.toml
simple-game/asm/: move-pixel.asm  write-to-screen.asm
simple-game/src/: load_cpu.rs  main.rs  system.rs
src/: asm-to-binary.rs  asm.rs  asm_to_tokens.rs  bus.rs  constants.rs  cpu_6502.rs  emulator.rs  lib.rs  log.rs  mos_6502_emulator.rs  opcodes.rs  ppu.rs  rom.rs
src/cpu_6502/: opcodes_illegal.rs  opcodes_jump.rs  opcodes_logical.rs  opcodes_move.rs  test.rs  test_helpers.rs
src/mappers/: mapper_001.rs  mod.rs  simple.rs
src/mos_6502_emulator/: opcodes_illegal.rs  opcodes_jump.rs  opcodes_logical.rs  opcodes_move.rs
task/: Cargo.toml
task/src/: main.rs
tool/: nesdev.py  nesdev_pages.py  pyproject.toml
