[package]
name = "cpu_6502"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"

[[bin]]
name = "cpu-visualizer"

[dependencies]
colored = "2.0"
tui = "0.17"
termion = "1.5"
sdl2 = "0.35"
rand = "0.8"

[dev-dependencies]
insta = { version = "1.5", features = ["ron"] }
