[workspace]
resolver = "2" # 2021 edition
members = [
    "cpu-visualizer",
    "nes-core",
    "nes-frontend",
    "ppu-cli-tool",
    "ppu-tool",
    "simple-game",
    "task",
]

[workspace.dependencies]
colored = "2.0"
dispatch = "0.2"
egui = "0.20"
egui_glow = "0.33"
egui-miniquad = "0.13"
glow = "0.16.0"
insta = "1.5"
macroquad = "0.3.25"
miniquad = "0.3.14"
native-dialog = "0.6"
rand = "0.8"
sdl2 = "0.35"
structopt = "0.3"
termion = "1.5"
tui = "0.17"
