[package]
name = "cpu-visualizer"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"

[dependencies]
colored = { workspace = true }
tui = { workspace = true }
termion = { workspace = true }
sdl2 = { workspace = true, features = ["unsafe_textures"] }
rand = { workspace = true }
nes-core = { path = "../nes-core" }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
