[package]
name = "nes-frontend"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"

[dependencies]
egui = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
nes-core = { path = "../nes-core" }
sdl2 = { workspace = true, features = ["ttf", "unsafe_textures"] }

[package.metadata.bundle]
icon = ["notes/macos/NesFrontend.icns"]
