[package]
name = "ppu-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { workspace = true }
miniquad = { workspace = true }
egui = { workspace = true }
structopt = { workspace = true }
native-dialog = { workspace = true }
dispatch = { workspace = true }
egui-miniquad = { workspace = true }
cpu-6502 = { path = "../cpu-6502" }
