[package]
name = "ppu-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { workspace = true }
miniquad = { workspace = true }
egui = "0.20"
structopt = { workspace = true }
native-dialog = { workspace = true }
dispatch = { workspace = true }
egui-miniquad = { workspace = true }
nes-core = { path = "../nes-core" }
